--- a/my-app/src/app/login/login.component.html
+++ b/my-app/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid main-container" *ngIf="!this._storage.getValue('loggedIn')">
+<div class="container-fluid main-container" *ngIf="!this._storage.getValue('loggedIn') && !this.createUser">
     <form class="form-horizontal">
         <div class="form-group">
             <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
@@ -22,7 +22,42 @@
     </form>
     <div>
         <div class="col-sm-offset-2 col-sm-10">
-            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect" (click)="loginClicked()">Submit</button>
+            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect" (click)="loginClicked()" [disabled]="!canSubmit()">Submit</button>
+            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect" (click)="newClicked()">New User</button> 
         </div>
     </div>
 </div>
+
+<div class="container-fluid main-container" *ngIf="!this._storage.getValue('loggedIn') && this.createUser">
+        <form class="form-horizontal">
+            <div class="form-group">
+                <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+                <div class="col-sm-10">
+                    <input [value]="username" (input)="username = $event.target.value" type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="inputEmail3" class="col-sm-2 control-label">Display Name</label>
+                <div class="col-sm-10">
+                    <input [value]="display_name" (input)="display_name = $event.target.value" type="email" class="form-control" id="inputEmail4" placeholder="Display Name">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+                <div class="col-sm-10">
+                    <input [value]="newPassword" (input)="newPassword = $event.target.value" type="password" class="form-control" id="inputPassword3" placeholder="Password">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="inputPassword4" class="col-sm-2 control-label">Confirm Password</label>
+                <div class="col-sm-10">
+                    <input [value]="confirmPassword" (input)="confirmPassword = $event.target.value" type="password" class="form-control" id="inputPassword4" placeholder="Confirm Password">
+                </div>
+            </div>
+        </form>
+        <div>
+            <div class="col-sm-offset-2 col-sm-10">
+                <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect" (click)="submitNewClicked()" [disabled]="!canSubmit()">Submit</button>
+            </div>
+        </div>
+    </div>
