--- a/my-app/src/app/profile/profile.component.css
+++ b/my-app/src/app/profile/profile.component.css
@@ -1,49 +1,4 @@
-.character-button{
-    max-width: 25vw;
-}
-
-.container-bordered{
-    border: 2px solid black;
-}
-
-.list-group{
-    height: 100%;
-    max-width: 25vw;
-}
-
-.panel-small{
-    max-width: 25vw;
-}
-
-.panel-tall{
-    height: 50vh;
-}
-
-.list-setHeight{
-    max-height: 75%;
-    overflow-y: scroll;
-}
-
-.list-setWidth{
-    max-width: 100%;
-}
-
-.list-group-item{
-    width: 100%;
-}
-
-.friend-input{
-    max-width: 50%
-}
-
-.panel-holder{
-    height: 50vh;
+.panel{
     max-height: 50vh;
     overflow: auto;
-}
-
-.panel-body-holder{
-    max-height: 75%;
-    height: 75%;
-    overflow-y: scroll;
 }
