--- a/my-app/src/app/profile/profile.component.css
+++ b/my-app/src/app/profile/profile.component.css
@@ -1,4 +1,10 @@
-.panel{
+.panel-tall{
     max-height: 50vh;
+    height: 50vh;
+}
+
+.static-height{
+    max-height: 69%;
+    height: 69%;
     overflow: auto;
 }
