UI updates, new stats

--- a/my-app/src/app/home/home.component.html
+++ b/my-app/src/app/home/home.component.html
@@ -2,11 +2,10 @@
 
 <div class="container-fluid">
     <div class="row">
-        
         <!-- Top Players Table -->
         <div class="col-md-4 panel panel-default container-bordered">
             <div class="panel-heading">
-                <h4 class="text-center">Top Players</h4>
+                <h4 class="text-center">Top Scores</h4>
             </div>
             <table class="table table-condensed table-fixed">
                 <thead>
@@ -15,9 +14,9 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <ng-container *ngFor="let character of character_history | async | sortingCharacter: 'score'; index as i">
+                    <ng-container *ngFor="let score of topScores | async | sortingCharacter: 'score'; index as i">
                         <tr *ngIf="i >= this.numPerPage * this.topPlayerPage && i <= (this.numPerPage * this.topPlayerPage) + this.numPerPage - 1">
-                            <td class="col-xs-2">{{i+1}}</td><td class="col-xs-8">{{character.character.name}}</td><td class="col-xs-2 text-center">{{character.score}}</td>
+                            <td class="col-xs-2">{{i+1}}</td><td class="col-xs-8">{{score.character.name}}: "{{score.user.display_name}}"</td><td class="col-xs-2 text-center">{{score.score}}</td>
                         </tr>
                     </ng-container>
                 </tbody>
@@ -47,9 +46,9 @@
                     </tr>
                 </thead>
                 <tbody> 
-                    <ng-container *ngFor="let character of character_history | async | sortingCharacter: 'level'; index as i">
+                    <ng-container *ngFor="let level of topLevels | async | sortingCharacter: 'number'; index as i">
                         <tr *ngIf="i >= this.numPerPage * this.topLevelPage && i <= (this.numPerPage * this.topLevelPage) + this.numPerPage - 1">
-                            <td class="col-xs-2">{{i+1}}</td><td class="col-xs-8">{{character.character.name}}</td><td class="col-xs-2 text-center">{{character.level.number}}</td>
+                            <td class="col-xs-2">{{i+1}}</td><td class="col-xs-8">{{level.user.display_name}}</td><td class="col-xs-2 text-center">{{level.number}}</td>
                         </tr>
                     </ng-container>
                 </tbody>
@@ -68,12 +67,17 @@
         </div>
 
         <!-- Class Distribution -->
-        <div class="col-md-4 panel panel-default">
+        <div class="col-md-4 panel panel-default container-bordered">
             <div class="panel-heading">
                 <h4 class="text-center">Class Distribution</h4>
             </div>
             <div class="panel-body">
                 <canvas baseChart [data]="pieChartData" [labels]="pieChartLabels" [chartType]="pieChartType" (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)"></canvas>
+                <ul class="list-group">
+                    <li class="list-group-item">Total Users: {{this.numUsers}}</li>
+                    <li class="list-group-item">Total Deaths: {{this.totalDeaths}}</li>
+                    <li class="list-group-item">Monster Deaths: {{this.monsterDeaths}}</li>
+                </ul>
             </div>
         </div>
     </div>
