--- a/my-app/src/app/play/play.component.html
+++ b/my-app/src/app/play/play.component.html
@@ -1,3 +1,5 @@
 <script type="text/javascript" src="../assets/bundle.js"></script>
 <!--<canvas #mycanvas id="screen" width="{{this._width}}" height="{{this._height}}"></canvas>--> <!-- 1788 1116 -->
-<canvas #mycanvas id="screen" [width]="_width" [height]="_height"></canvas>
+<div class="center">
+    <canvas #mycanvas id="screen" [width]="_width" [height]="_height"></canvas>
+</div>
