--- a/my-app/src/app/profile/profile.component.html
+++ b/my-app/src/app/profile/profile.component.html
@@ -52,7 +52,7 @@
                 </div>
             </div>
             <div class="panel-footer">
-                <button type="button" class="btn btn-success" (click)="confirmChanges()" [disabled]="!this.areChanges()">Confim</button>                    
+                <button type="button" class="btn btn-success" (click)="confirmChanges()" [disabled]="!this.areChanges()">Confirm</button>                    
             </div>
         </div>
     </div>
