--- a/my-app/src/app/stats/stats.component.html
+++ b/my-app/src/app/stats/stats.component.html
@@ -2,6 +2,7 @@
     <div class="row">
       <div class="page-header" *ngIf="this.user">
         <h1><small>{{this.user.display_name}}</small></h1>
+        <h3><small>Total Deaths: {{this.totalDeaths}}</small></h3>
       </div>
     </div>
 
